# EigenCalc

./: CMakeLists.txt  README.md
EigenCalc/: Application.cpp  Application.h  FileStream.cpp  FileStream.h
